Update content options style in menu builder to prevent overflow-x on long content titles.

--- a/src/app/components/Admin/registered-components/DraggableList/_style.scss
+++ b/src/app/components/Admin/registered-components/DraggableList/_style.scss
@@ -27,6 +27,7 @@ $menu-editor-item-outline: $color-gray !default;
         list-style: none;
         margin: 0;
         padding: 8px 0;
+        overflow-x: hidden;
     }
 
     .content-option {
